test_suite/alan-2022-examples/failing/003550_mutation.alan
source s begin if 422 then relax elsif 10 then relax < end end
